2003-08-22  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386.p4.events: clarify than 128BIT_MMX_UOP count only integer
	  SSE2 ops
	* pp/opreport.cpp: minor spacing change in output

2003-08-22  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: report the kernel pointer size

2003-08-22  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: read new /dev/oprofile/pointer_size
	in preference to kcore. kcore code will eventually go.

2003-08-21  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: update gcc2_compiled. comment
	to reflect reality

2003-08-19  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: really merge when --merge=lib and image name are
	  specified.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: output threshold percent when necessary.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: remove ELF-based symbol size code

2003-08-15  William Cohen  <wcohen@redhat.com>

	* doc/opcontrol.1.in:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: Correct path to /root/.oprofile/daemonrc.

2003-08-15  Thomas Spatzier  <TSPAT@de.ibm.com>

	* daemon/opd_cookie.h: fix s390 syscall

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: erase_to_last_of() is not a ltrim()

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	Dave Jones suggested this change.

	* module/x86/op_model_p4.c: remove superflous ';' at end of some macro

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h: remove erase_from_last_of()
	* libutil++/string_manip.cpp: and tidy erase_to_last_of(), rtrim() and
	  ltrim()

2003-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h:
	* libpp/profile_container.cpp: remove nil_symbol_index

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove "base_vma" parameter
	to add_samples(), we can just re-grab it straight from
	the abfd
